Add book cover update & strong valiations on add book